--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -3,7 +3,20 @@
 {% block content %}
 
 
-current - on currenttodos.html
+current
+
+<ul>
+    {% for todo in todos %}
+    <li>
+        {% if todo.important %}<b>{% endif %}
+        {{ todo.title }}
+        {% if todo.important %}</b>{% endif %}
+
+        {% if todo.memo %} - {{ todo.memo }}{% endif %}
+
+    </li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
 
